--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,12 +10,13 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <p class="navbar-brand">DAILY JOURNAL</p>
+        <p class="navbar-brand">BLOG</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
           <li id="home"><a href="/">HOME</a></li>
           <li id="about"><a href="/about">ABOUT US</a></li>
           <li id="contact"><a href="/contact">CONTACT US</a></li>
+          <li id="combose"><a href="/compose">COMPOSE</a></li>
         </ul>
     </div>
   </nav>
